1. resolve build fail in linux. 2. resolve not exist user info.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,9 @@ buildscript {
         targetSdkVersion = 29
     }
     repositories {
+        maven {
+            url 'https://dl.google.com/dl/android/maven2'
+        }
         google()
         jcenter()
     }
